--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}
+    Posts
+{% endblock %}
+
+{% block css_files %}
+
+{% endblock %}
+
+{% block content %}
+    <h1>Welcome to Posts</h1>
+    <div id="posts">
+        {% for post in posts %}
+            <p class="username">{{ post.user.username }}</p>
+            <img src="{{ post.image.url }}" alt="post image" style="height: 500px; width: 500px;">
+            <p class="caption" >{{ post.caption }}</p>
+        {% endfor %}
+    </div>
+{% endblock %}
