--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{% block Titel %}{% endblock %}</title>
+    {% block css_files %}{% endblock %}
 </head>
 <body>
-
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
