--- a/accounts/templates/authenticate/login.html
+++ b/accounts/templates/authenticate/login.html
@@ -11,5 +11,6 @@
         {{ form.as_p }}
         <button type="submit">Login</button>
     </form>
+    <p>don't have an account? <a href="{% url 'register' %}">register</a></p>
 </body>
 </html>
