--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block content %}
+    <a href="{% url "logout" %}">logout</a>
     <h1>Welcome to Posts</h1>
     <div id="posts">
         {% for post in posts %}
