Implemented 'upload_post' and created user_profiles app

--- a/accounts/templates/authenticate/login.html
+++ b/accounts/templates/authenticate/login.html
@@ -11,6 +11,6 @@
         {{ form.as_p }}
         <button type="submit">Login</button>
     </form>
-    <p>don't have an account? <a href="{% url 'register' %}">register</a></p>
+    <p>don't have an account? <a href="{% url 'register' %}">Sign up</a></p>
 </body>
 </html>
