--- a/posts/static/posts/style.css
+++ b/posts/static/posts/style.css
@@ -17,6 +17,9 @@ main {
 #posts .post-footer {
     box-sizing: border-box;
     padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #posts .user {
