--- a/posts/static/posts/style.css
+++ b/posts/static/posts/style.css
@@ -14,7 +14,14 @@ main {
     justify-items: center;
 }
 
+#posts .post-image {
+    height: 500px;
+    width: 500px;
+    object-fit: cover;
+}
+
 #posts .post-footer {
+    margin-bottom: 10px;
     box-sizing: border-box;
     padding: 15px;
     display: flex;
