--- a/static/styles.css
+++ b/static/styles.css
@@ -4,10 +4,16 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    color: #292d34;
 }
 
 html {
     font-family: 'Montserrat', sans-serif;
+}
+
+body {
+    min-height: 100vh;
 }
 
 p {
@@ -26,6 +32,7 @@ p {
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(30px)
 }
+
 #navbar div {
     display: flex;
     width: 30%;
@@ -36,7 +43,7 @@ p {
     font-family: "Playwrite CU", cursive;
     font-size: 1.7rem;
     font-weight: 400;
-    color: black;
+    color: #292d34;
 }
 
 #navbar .logo {
@@ -66,13 +73,13 @@ p {
     padding: 7px 12px;
     border-radius: 15px;
     font-size: 2.3rem;
-    -webkit-text-stroke: 0.01rem black;
+    -webkit-text-stroke: 0.01rem #292d34;
     transition: background-color 0.3s ease;
 
 }
 
 #navbar .bi-plus-square:hover, .bi-plus-square-fill:hover, .bi-house-door:hover, .bi-house-door-fill:hover {
-    background-color: rgba(230, 230, 230, 0.7);
+    background-color: rgba(235, 235, 235, 0.7);
 }
 
 #navbar .user {
