--- a/posts/templates/posts/upload_post.html
+++ b/posts/templates/posts/upload_post.html
@@ -11,6 +11,16 @@
 
 {% block content %}
     <div class="container">
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <div class="alert {{ message.tags }}">
+                        {{ message }}
+                        <span class="close" onclick="this.parentElement.style.display='none';">&times;</span>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
         <h1>Upload Post</h1>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
@@ -25,5 +35,5 @@
             <button type="submit">Upload post</button>
         </form>
     </div>
-    <script src="{% static 'posts/script.js' %}"></script>
+    <script src="{% static 'posts/upload_post.js' %}"></script>
 {% endblock %}
