Implemented 'edit_profile' to change name, bio and profile picture

--- a/accounts/templates/authenticate/login.html
+++ b/accounts/templates/authenticate/login.html
@@ -1,11 +1,14 @@
+{% load static%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="{% static 'accounts/login.css' %}">
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>Petstagram</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
