--- a/user_profiles/static/user_profiles/user_profile.css
+++ b/user_profiles/static/user_profiles/user_profile.css
@@ -43,12 +43,15 @@
 
 #user-container .profile-info a {
     text-decoration: none;
-    color: white;
     font-size: 1.2rem;
     font-weight: 600;
     padding: 10px 30px;
     border-radius: 15px;
-    background-color: gray;
+    background-color: #f1f1f1;
+}
+
+#user-container .profile-info a:hover {
+    background-color: #d9d9d9;
 }
 
 #user-posts {
