--- a/accounts/templates/authenticate/login.html
+++ b/accounts/templates/authenticate/login.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="{% static 'accounts/login.css' %}">
 </head>
 <body>
-    <h1>Petstagram</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
-    <p>don't have an account? <a href="{% url 'register' %}">Sign up</a></p>
+    <div class="container">
+        <h1>Petstagram</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Login</button>
+        </form>
+        <p>don't have an account? <a href="{% url 'register' %}">Sign up</a></p>
+    </div>
 </body>
 </html>
