Deleted post_detail.html and implemented basic modal window for showing post details

--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -7,6 +7,7 @@
 
 {% block css_files %}
     <link rel="stylesheet" href="{% static 'posts/style.css' %}">
+    <link rel="stylesheet" href="{% static 'posts/modal_post_detail.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -25,7 +26,7 @@
                         </div>
                     </div>
                     <div class="actions">
-                        <a href="{% url 'post_detail' post.id %}">
+                        <a href="javascript:void(0);" onclick="openModal('{{ post.image.url }}', '{{ post.caption|escapejs }}')">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
                             <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"/>
                         </svg>
@@ -35,4 +36,6 @@
             </li>
         {% endfor %}
     </ul>
+    {% include 'posts/partials/modal_post_detail.html' %}
+    <script src="{% static 'posts/modal_post_detail.js' %}"></script>
 {% endblock %}
