Added more post details to the modal window with improved style

--- a/posts/templates/posts/partials/modal_post_detail.html
+++ b/posts/templates/posts/partials/modal_post_detail.html
@@ -5,12 +5,18 @@
             <img id="modalImage" src="" alt="Pet Image">
         </div>
         <div class="details-section">
-            <p id="modalCaption">Caption goes here</p>
+            <div class="user">
+                <img id="modalProfilePic" class="user-pic" src="" alt="">
+                <div class="text">
+                    <a id="modalUsername" class="user-name" href=""></a>
+                    <p id="modalPostTime" class="post-time"></p>
+                </div>
+            </div>
+            <hr>
+            <div class="caption-container">
+                <p id="modalCaption">Caption goes here</p>
+            </div>
             <div id="commentsSection">
-                <p>Comments:</p>
-                <ul id="commentsList">
-                    <!-- Comments will be dynamically loaded here -->
-                </ul>
             </div>
         </div>
     </div>
