--- a/posts/static/posts/modal_post_detail.css
+++ b/posts/static/posts/modal_post_detail.css
@@ -8,17 +8,21 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
 }
 
 .modal-content {
     display: flex;
-    background-color: #fefefe;
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(100px);
+    -webkit-backdrop-filter: blur(100px);
     margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 900px;
+    width: 90%;
+    max-width: 1200px;
+    border-radius: 20px;
+    height: 650px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
 }
 
 .image-section {
@@ -26,13 +30,55 @@
 }
 
 .image-section img {
-    width: 100%;
-    height: auto;
+    height: 100%;
+    width: 650px;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 
 .details-section {
     flex: 1;
     padding-left: 20px;
+}
+
+#postModal .user {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+#postModal .text {
+    margin-left: 15px;
+}
+
+#postModal .user-name {
+    text-decoration: none;
+    color: inherit;
+    font-weight: 600;
+}
+
+#postModal .post-time {
+    margin-top: 5px;
+    color: #a0a0a0;
+    font-size: 0.8rem;
+}
+
+#postModal .user-pic {
+    border-radius: 50%;
+    height: 45px;
+    width: 45px;
+}
+
+#postModal hr {
+    margin: 20px 20px 10px 0;
+    border: none;
+    height: 1px;
+    background-color: lightgray;
+}
+
+#modalCaption {
+    margin-top: 10px;
 }
 
 .close {
