--- a/posts/static/posts/modal_post_detail.css
+++ b/posts/static/posts/modal_post_detail.css
@@ -44,8 +44,14 @@
 
 #postModal .user {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     margin-top: 20px;
+}
+
+#postModal .post-info {
+    display: flex;
+    align-items: center;
 }
 
 #postModal .text {
@@ -68,6 +74,24 @@
     border-radius: 50%;
     height: 45px;
     width: 45px;
+}
+
+#deleteForm button {
+    background-color: red;
+    color: white;
+    border: 2px solid red;
+    font-size: 1rem;
+    border-radius: 10px;
+    padding: 8px 16px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.2s ease;
+    margin-right: 20px;
+}
+
+#deleteForm button:active {
+    background-color: transparent;
+    color: red;
 }
 
 #postModal hr {
