--- a/accounts/static/accounts/register.css
+++ b/accounts/static/accounts/register.css
@@ -89,6 +89,7 @@ p a:hover {
 }
 
 .errorlist {
+    display: block;
     list-style-type: none;
     background-color: #f8d7da; /* Light red background */
     border-left: 4px solid #f5c6cb; /* Red left border for emphasis */
